# cdk

./: .classpath  .cvsignore  .gitignore  .j2s  .project  .travis.yml  AUTHORS  AUTHORS.txt  BUGS  CHANGELOG  CITATION.cff  EditorApplet.html  ISSUES.txt  LICENSE.txt  README  README.md  SECURITY.md  ViewerApplet.html  ViewerAppletSmall.html  agenda.txt  analyzeBugs.pl  build-0-site.xml  build-1-site.xml  build-2-core_all-dist.xml  build-applet.xml  build-dict.xml  build-eclipse.xml  build-jchempaint.xml  build.properties  build.props  build.xml  cdk.kpx  changelog-jcp.xml  changelog.20060714.txt  changelog.txt  changelog.xml  changelog.xsd  checkstyle.xml  createModulePages.groovy  devel.xml  (+19 more)
.externalToolBuilders/: EclipsePreBuild.launch
app/: pom.xml
base/: pom.xml
bundle/: dependency-reduced-pom.xml  pom.xml
data/: Stereo-DT.txt  benzene.cml  bug599540.mol  bug639455.cml  bug642426.mol  bug682233.mol  butadiene.cml  c6h6.com  ethen.com  gravindex.hin  guanine.txt  hydroxyamino.mol  isolated_ringsystems.cml  methylbenzol.mol  mmff94.prm  naphtalene.cml  overlaptest.cml  r.cml  smiles.txt  toluene.cml
descriptor/: pom.xml
develjar/: .gitignore  dbdoclet.properties
display/: pom.xml
doc/: .gitignore  CHANGELOG  changelog2TXT.xsl  help-doc.html  index.html  lgpl.license  packages.html  serialized-form.html
dtd/: project-ext.dtd  project.dtd
gcj/: .cvsignore  compile  compile_classes  compile_libraries  core.classes  (+2 more)
jar/: ChangeLog  LICENSE  Makefile.am  antlr.jar.extra  dbdoclet.properties  xpp3-1.1.4c.jar.extra
jar/libio/: .cvsignore  README
(+51564 files in other folders)
